# yew-benchmark-html-include

./: Cargo.toml  README.md  Trunk.toml  index.html
benches/: bench_html.rs
src/: child_component.html  lib.rs  main.rs
